Bug/fix: Corrected error as overlay value is a deprecated option for overflow y. Changed some measurements to percentages to be more reponsive.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,6 @@
 * Browsers: last 4 version
 */
 
-/*---------HTML: style overlay-------------*/
-html {
-   overflow-x: overlay;
-   overflow-y: overlay;
-}
-
 /*------ Map and general style--------*/
 .map-canvas {
    background: none;
@@ -69,14 +63,13 @@ p {
    border: none;
 }
 .nav-position {
-   width: auto;
+   width: 25%;
 }
 
 .mode-tab {
    background-color: #d4d4d2;
    display: block;
-   padding: 0.75rem 1.75rem;
-   width: 25vw;
+   padding: 10% 40%;
 }
 
 .mode-tab i.fas {
